Bug 886076 - Part 1: Implement moveNextByText and movePreviousByText in nsAccessiblePivot. r=surkov